// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YooAlertComponent Snapshots Should have closeable content 1`] = `
<yoo-alert
  class="accent toast hydrated"
  closeable="true"
  data-yoo-alert-host=""
>
  
  <div
    class="container"
    data-yoo-alert=""
  >
    <div
      class="link"
      data-yoo-alert=""
    >
      
    </div>
    <div
      class="inner-container"
      data-yoo-alert=""
    >
      
      <div
        class="text-container"
        data-yoo-alert=""
      >
        
        <span
          class="value"
          data-yoo-alert=""
        >
          
        </span>
      </div>
    </div>
    <div
      class="close-container"
      data-yoo-alert=""
    >
      <span
        class="close"
        data-yoo-alert=""
      >
         
        <i
          class="yo-close"
          data-yoo-alert=""
        />
      </span>
    </div>
  </div>
</yoo-alert>
`;

exports[`YooAlertComponent Snapshots Should have heading and text and closeable content 1`] = `
<yoo-alert
  class="accent toast hydrated"
  closeable="true"
  data-yoo-alert-host=""
  heading="alert accent"
  text="alert text"
>
  
  <div
    class="container"
    data-yoo-alert=""
  >
    <div
      class="link"
      data-yoo-alert=""
    >
      
    </div>
    <div
      class="inner-container"
      data-yoo-alert=""
    >
      
      <div
        class="text-container"
        data-yoo-alert=""
      >
        <span
          class="heading"
          data-yoo-alert=""
        >
          alert accent
        </span>
        <span
          class="value"
          data-yoo-alert=""
        >
          alert text
        </span>
      </div>
    </div>
    <div
      class="close-container"
      data-yoo-alert=""
    >
      <span
        class="close"
        data-yoo-alert=""
      >
         
        <i
          class="yo-close"
          data-yoo-alert=""
        />
      </span>
    </div>
  </div>
</yoo-alert>
`;

exports[`YooAlertComponent Snapshots Should have heading and text and icon and closeable content 1`] = `
<yoo-alert
  class="accent toast hydrated"
  closeable="true"
  data-yoo-alert-host=""
  heading="alert accent"
  icon="yo-check-tick"
  text="alert text"
>
  
  <div
    class="container"
    data-yoo-alert=""
  >
    <div
      class="link"
      data-yoo-alert=""
    >
      
    </div>
    <div
      class="inner-container"
      data-yoo-alert=""
    >
      <span
        class="icon"
        data-yoo-alert=""
      >
        <i
          class="yo-check-tick"
          data-yoo-alert=""
        />
      </span>
      <div
        class="text-container"
        data-yoo-alert=""
      >
        <span
          class="heading"
          data-yoo-alert=""
        >
          alert accent
        </span>
        <span
          class="value"
          data-yoo-alert=""
        >
          alert text
        </span>
      </div>
    </div>
    <div
      class="close-container"
      data-yoo-alert=""
    >
      <span
        class="close"
        data-yoo-alert=""
      >
         
        <i
          class="yo-close"
          data-yoo-alert=""
        />
      </span>
    </div>
  </div>
</yoo-alert>
`;

exports[`YooAlertComponent Snapshots Should have heading and text and icon content 1`] = `
<yoo-alert
  class="accent toast hydrated"
  data-yoo-alert-host=""
  heading="alert accent"
  icon="yo-check-tick"
  text="alert text"
>
  
  <div
    class="container"
    data-yoo-alert=""
  >
    <div
      class="link"
      data-yoo-alert=""
    >
      
    </div>
    <div
      class="inner-container"
      data-yoo-alert=""
    >
      <span
        class="icon"
        data-yoo-alert=""
      >
        <i
          class="yo-check-tick"
          data-yoo-alert=""
        />
      </span>
      <div
        class="text-container"
        data-yoo-alert=""
      >
        <span
          class="heading"
          data-yoo-alert=""
        >
          alert accent
        </span>
        <span
          class="value"
          data-yoo-alert=""
        >
          alert text
        </span>
      </div>
    </div>
    <div
      class="close-container"
      data-yoo-alert=""
    >
      
    </div>
  </div>
</yoo-alert>
`;

exports[`YooAlertComponent Snapshots Should have heading and text content 1`] = `
<yoo-alert
  class="accent toast hydrated"
  data-yoo-alert-host=""
  heading="alert accent"
  text="alert text"
>
  
  <div
    class="container"
    data-yoo-alert=""
  >
    <div
      class="link"
      data-yoo-alert=""
    >
      
    </div>
    <div
      class="inner-container"
      data-yoo-alert=""
    >
      
      <div
        class="text-container"
        data-yoo-alert=""
      >
        <span
          class="heading"
          data-yoo-alert=""
        >
          alert accent
        </span>
        <span
          class="value"
          data-yoo-alert=""
        >
          alert text
        </span>
      </div>
    </div>
    <div
      class="close-container"
      data-yoo-alert=""
    >
      
    </div>
  </div>
</yoo-alert>
`;

exports[`YooAlertComponent Snapshots Should have heading content 1`] = `
<yoo-alert
  class="accent toast hydrated"
  data-yoo-alert-host=""
  heading="alert accent"
>
  
  <div
    class="container"
    data-yoo-alert=""
  >
    <div
      class="link"
      data-yoo-alert=""
    >
      
    </div>
    <div
      class="inner-container"
      data-yoo-alert=""
    >
      
      <div
        class="text-container"
        data-yoo-alert=""
      >
        <span
          class="heading"
          data-yoo-alert=""
        >
          alert accent
        </span>
        <span
          class="value"
          data-yoo-alert=""
        >
          
        </span>
      </div>
    </div>
    <div
      class="close-container"
      data-yoo-alert=""
    >
      
    </div>
  </div>
</yoo-alert>
`;

exports[`YooAlertComponent Snapshots Should have icon content 1`] = `
<yoo-alert
  class="accent toast hydrated"
  data-yoo-alert-host=""
  icon="yo-check-tick"
>
  
  <div
    class="container"
    data-yoo-alert=""
  >
    <div
      class="link"
      data-yoo-alert=""
    >
      
    </div>
    <div
      class="inner-container"
      data-yoo-alert=""
    >
      <span
        class="icon"
        data-yoo-alert=""
      >
        <i
          class="yo-check-tick"
          data-yoo-alert=""
        />
      </span>
      <div
        class="text-container"
        data-yoo-alert=""
      >
        
        <span
          class="value"
          data-yoo-alert=""
        >
          
        </span>
      </div>
    </div>
    <div
      class="close-container"
      data-yoo-alert=""
    >
      
    </div>
  </div>
</yoo-alert>
`;

exports[`YooAlertComponent Snapshots Should have text content 1`] = `
<yoo-alert
  class="accent toast hydrated"
  data-yoo-alert-host=""
  text="alert accent"
>
  
  <div
    class="container"
    data-yoo-alert=""
  >
    <div
      class="link"
      data-yoo-alert=""
    >
      
    </div>
    <div
      class="inner-container"
      data-yoo-alert=""
    >
      
      <div
        class="text-container"
        data-yoo-alert=""
      >
        
        <span
          class="value"
          data-yoo-alert=""
        >
          alert accent
        </span>
      </div>
    </div>
    <div
      class="close-container"
      data-yoo-alert=""
    >
      
    </div>
  </div>
</yoo-alert>
`;
